examples/test/testpolicy14657.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14657
  namespace: namespace248
spec:
  podSelector:
    matchLabels:
      key42: value21
      key33: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value34
      podSelector:
        matchLabels:
          key27: value25
          key24: value28
